--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     </div>
                 </div>
             </div>
-            <div class ="row">
+            <!-- <div class ="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -485,7 +485,7 @@
                         <h4>Leave Manager</h4>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -500,7 +500,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-lg-4 col-md-4 col-sm-6 portfolio-item">
                     <a href="#certificateModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -513,7 +513,7 @@
                         <h4>Tensorflow Developer</h4>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-lg-4 col-md-4 col-sm-6 portfolio-item">
                     <a href="#certificateModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -526,7 +526,7 @@
                         <h4>SAS Certfied Specialist: Base Programming</h4>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class=" col-lg-4 col-md-4 col-sm-6 portfolio-item">
                     <a href="#certificateModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -911,7 +911,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 4 -->
+    <!-- Portfolio Modal 4
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -926,7 +926,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <h2>Settlement Mapping</h2>
-                                <p class="item-intro text-muted">Capstone project for CSC522 - Automated Learning and Data Analysis class</p>
+                                <p class="item-intro text-muted">Ai IN </p>
                                 <p>
                                     <strong>Mentors: Dr. Ranga Raju Vatsavai, Krishna Gadiraju (TA)</strong>
                                     <br>
@@ -1179,7 +1179,7 @@
             </div>
         </div>
     </div>
-
+ -->
 
 
     <!-- Certificates Modals -->
