--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                     <div class="team-member">
                         <img src="img/team/me.jpg" class="img-responsive img-circle" alt="">
                         <h4>Ashwin Balasubramaniam</h4>
-                        <p class="text-muted">Data Sciencetist</p>
+                        <p class="text-muted">Data Scientist</p>
                         <ul class="list-inline social-buttons">
                             <li>
                                 <a href="mailto:abalasu4@ncsu.edu">
