Info update and minor design changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Ashwin Balasubramaniam</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -69,7 +69,7 @@
                         <a class="page-scroll" href="#portfolio">Projects & Certifications</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Resume</a>
+                        <a class="page-scroll" href="#team">About Me</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -143,9 +143,33 @@
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
+            
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <a href="https://www.ey.com/en_us/innovation-financial-services/advanced-analytics">
+                                    <img class="img-circle img-responsive" src="img/about/ey_logo.png" alt="">
+                                </a>
+                            </div>
+                            <div class="timeline-panel">
+                                <br>
+                                <br>
+                                <div class="timeline-heading">
+                                    <h4>July 2021 - Present</h4>
+                                    <h4 class="subheading">Ernst & Young
+                                        <br> Charlotte, NC</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        <b>Position:</b>
+                                        <a style="color:Grey" href="https://analytics.ncsu.edu/">Data Scientist</a>
+                                        <br>
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
                         <li>
                             <div class="timeline-image">
                                 <a href="https://azure.microsoft.com/en-us/">
@@ -155,13 +179,13 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <br>
-                                    <h4>AUG 2020 - Presnt</h4>
+                                    <h4>SEP 2020 - MAY 2021 </h4>
                                     <h4 class="subheading">Microsoft
                                         <br> Practicum Project</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        <b>Position: </b>Data Scientist
+                                        <b>Position: </b>Tech Lead
                                     </p>
                                 </div>
                             </div>
@@ -184,7 +208,6 @@
                                         <b>Degree:</b>
                                         <a style="color:Grey" href="https://analytics.ncsu.edu/">Master of Science in Analytics</a>
                                         <br>
-                                        <b>GPA:</b> - / 4.00
                                     </p>
                                 </div>
                             </div>
@@ -599,10 +622,11 @@
                     <div class="team-member">
                         <img src="img/team/me.jpg" class="img-responsive img-circle" alt="">
                         <h4>Ashwin Balasubramaniam</h4>
-                        <p class="text-muted">Data Scientist</p>
+                        <!-- <p class="text-muted">Data Scientist</p> -->
+                        <p class="text-muted">Keep in Touch</p>
                         <ul class="list-inline social-buttons">
                             <li>
-                                <a href="mailto:abalasu4@ncsu.edu">
+                                <a href="mailto:ashwinram472@gmail.com">
                                     <i class="fa fa-envelope" aria-hidden="true" text-align="center"></i>
                                 </a>
                             </li>
@@ -637,10 +661,14 @@
                     <br>
                     <br>
                     <br>
-                    <br> Hello, I am Ashwin Balasubramaniam. I am currently pursuing Master of Science in Analytics at North &nbsp;&nbsp; Carolina State University.
-                    I belong to India, where I finished my bachelor's degree in Mechanical &nbsp;&nbsp;&nbsp;&nbsp;Engineering from SRM Institute of Science and Technology. My areas of 
-                    interest are Machine &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Learning, Deep Learning,
-                    Artificial Intelligence, and Data Mining.
+                    <br> Hello, I am <strong>Ashwin Balasubramaniam</strong> and I am a Data Scientist  at Ernst & Young LLP. Earlier I worked in NLP research where I published a paper on Novel Deep Learning model. I did my masters in Analytics from The Institure for Advanced Analytics. 
+                    <br>
+                    <br>
+                    Aside from writing code, talking with clients and working to be a better Data Scientist Consultant, I also love:
+                    <ul class="text-muted" style="text-align:justify">
+                        <li><b>Rock Climbing</li>
+                        <li >Backpacking</li>
+                        <li> Reading Books</li>
                 </p>
                 <br>
                 <p>
@@ -731,20 +759,7 @@
         </div>
     </section> -->
     <!--    
-                    <ul class="list-inline social-buttons">
-                        <li><a href="https://www.facebook.com/acharyaomkar01"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="https://www.twitter.com/acharya_omkar"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="https://www.linkedin.com/in/omkaracharya"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
--->
-    <footer>
-        <div class="container">
-            <span class="copyright">Copyright &copy; Ashwin Balasubramaniam 2019</span>
-        </div>
-    </footer>
+
 
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
