updated job title

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                     <br>
                     <br>
                     <br>
-                    <br> Hello, I am <strong>Ashwin Balasubramaniam</strong> and I am a Data Scientist  at Ernst & Young LLP. Earlier I worked in NLP research where I published a paper on Novel Deep Learning model. I did my masters in Analytics from The Institure for Advanced Analytics. 
+                    <br> Hello, I am <strong>Ashwin Balasubramaniam</strong> and I am a Senior Data Scientist Consultant at Ernst & Young LLP. Earlier I worked in NLP research where I published a paper on Novel Deep Learning model. I did my masters in Analytics from The Institure for Advanced Analytics. 
                     <br>
                     <br>
                     Aside from writing code, talking with clients and working to be a better Data Scientist Consultant, I also love:
