Updated EY Experience

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <br>
                                 <div class="timeline-heading">
                                     <h4>July 2021 - Present</h4>
-                                    <h4 class="subheading">Ernst & Young
+                                    <h4 class="subheading"><a href="#eyModal" data-toggle="modal">Ernst & Young</a>
                                         <br> Charlotte, NC</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -180,7 +180,7 @@
                                 <div class="timeline-heading">
                                     <br>
                                     <h4>SEP 2020 - MAY 2021 </h4>
-                                    <h4 class="subheading">Microsoft
+                                    <h4 class="subheading"><a href="#microsoftModal" data-toggle="modal">Microsoft</a>
                                         <br> Practicum Project</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -661,7 +661,7 @@
                     <br>
                     <br>
                     <br>
-                    <br> Hello, I am <strong>Ashwin Balasubramaniam</strong> and I am a Senior Data Scientist Consultant at Ernst & Young LLP. Earlier I worked in NLP research where I published a paper on Novel Deep Learning model. I did my masters in Analytics from The Institure for Advanced Analytics. 
+                    <br> Hello, I am <strong>Ashwin Balasubramaniam</strong> and I am a Senior Data Scientist Consultant at <a href="#eyModal" data-toggle="modal">Ernst & Young</a> LLP. Earlier I worked in NLP research where I published a paper on Novel Deep Learning model. I did my masters in Analytics from The Institure for Advanced Analytics. 
                     <br>
                     <br>
                     Aside from writing code, talking with clients and working to be a better Data Scientist Consultant, I also love:
@@ -1429,3 +1429,155 @@
 </body>
 
 </html>
+
+<!-- <a href="#eyModal" data-toggle="modal">Ernst & Young</a> Modal -->
+<div class="portfolio-modal modal fade" id="eyModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="close-modal" data-dismiss="modal">
+<div class="lr">
+<!-- Microsoft Modal -->
+<div class="portfolio-modal modal fade" id="microsoftModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="close-modal" data-dismiss="modal">
+<div class="lr">
+<div class="rl">
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-lg-8 col-lg-offset-2">
+<div class="modal-body">
+<!-- Project Details Go Here -->
+<h2>Microsoft</h2>
+<p class="item-intro text-muted">Data Science Tech Lead – Practicum</p>
+<p>
+<b>Experience:</b>
+<ul>
+<li>Reduced Azure support tickets by 18% by analyzing 500K+ customer journeys using survival analysis and NLP-driven pattern recognition, identifying root causes (e.g., API documentation gaps) and deploying targeted self-service solutions</li>
+<li>Engineered distributed data pipelines (Spark) to process 800M+ rows of Azure customer data, improving predictive model accuracy by 22% and retention by 15%</li>
+<li>Built automated feature engineering workflows, reducing data processing time by 60% and enabling real-time analytics</li>
+</ul>
+</p>
+<button type="button" class="btn btn-primary" data-dismiss="modal">
+<i class="fa fa-times"></i> Close</button>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- Microsoft Modal -->
+<div class="portfolio-modal modal fade" id="microsoftModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="close-modal" data-dismiss="modal">
+<div class="lr">
+<div class="rl">
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-lg-8 col-lg-offset-2">
+<div class="modal-body">
+<!-- Project Details Go Here -->
+<h2>Microsoft</h2>
+<p class="item-intro text-muted">Data Science Tech Lead – Practicum</p>
+<p>
+<b>Experience:</b>
+<ul>
+<li>Reduced Azure support tickets by 18% by analyzing 500K+ customer journeys using survival analysis and NLP-driven pattern recognition, identifying root causes (e.g., API documentation gaps) and deploying targeted self-service solutions</li>
+<li>Engineered distributed data pipelines (Spark) to process 800M+ rows of Azure customer data, improving predictive model accuracy by 22% and retention by 15%</li>
+<li>Built automated feature engineering workflows, reducing data processing time by 60% and enabling real-time analytics</li>
+</ul>
+</p>
+<button type="button" class="btn btn-primary" data-dismiss="modal">
+<i class="fa fa-times"></i> Close</button>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- <a href="#microsoftModal" data-toggle="modal">Microsoft</a> Modal -->
+<div class="portfolio-modal modal fade" id="microsoftModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="close-modal" data-dismiss="modal">
+<div class="lr">
+<div class="rl">
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-lg-8 col-lg-offset-2">
+<div class="modal-body">
+<!-- Project Details Go Here -->
+<h2><a href="#microsoftModal" data-toggle="modal">Microsoft</a></h2>
+<p class="item-intro text-muted">Data Science Tech Lead – Practicum</p>
+<p>
+<b>Experience:</b>
+<ul>
+<li>Reduced Azure support tickets by 18% by analyzing 500K+ customer journeys using survival analysis and NLP-driven pattern recognition, identifying root causes (e.g., API documentation gaps) and deploying targeted self-service solutions</li>
+<li>Engineered distributed data pipelines (Spark) to process 800M+ rows of Azure customer data, improving predictive model accuracy by 22% and retention by 15%</li>
+<li>Built automated feature engineering workflows, reducing data processing time by 60% and enabling real-time analytics</li>
+</ul>
+</p>
+<button type="button" class="btn btn-primary" data-dismiss="modal">
+<i class="fa fa-times"></i> Close</button>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="rl">
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<div class="col-lg-8 col-lg-offset-2">
+<div class="modal-body">
+<!-- Project Details Go Here -->
+<h2><a href="#eyModal" data-toggle="modal">Ernst & Young</a></h2>
+<p class="item-intro text-muted">Senior Data Scientist & ML Engineer</p>
+<p>
+<b>Client Projects:</b>
+<ul>
+<li>Hyper Personalization of Ads for Global Wealth Manager</li>
+<li>Advisor Co-Pilot using AWS Bedrock for North American Wealth Manager</li>
+<li>Agentic Support Chatbot for Global Wealth Manager</li>
+<li>Summarizer LLM for a Large US Bank</li>
+</ul>
+</p>
+<p>
+<b>Experience:</b>
+<ul>
+<li>Designed and implemented a Contextual Multi-Armed Bandit (CMAB) algorithm optimizing offers, channels, and placements for 6M+ clients, resulting in a 12% increase in customer engagement (CTR) and a 7% uplift in revenue</li>
+<li>Developed a scalable decision engine pipeline using AWS serverless architecture, enabling internal teams to deploy and assess experiments at scale, reducing deployment time by 50% and operational costs by 34%</li>
+<li>Led a 6-person team to design an AI-driven "Advisor Co-Pilot" leveraging AWS Bedrock, automating administrative tasks for financial advisors and increasing efficiency by up to 40%</li>
+<li>Integrated Generative AI tools to enhance self-service capabilities and deliver hyper-personalized communications, leading to a 5% increase in sales and 65% reduction in advisor – client account maintenance time</li>
+<li>Designed a stateful multi-agent architecture using LangGraph and AWS LLMs (Amazon Titan, Claude), deploying dynamic routing agents while maintaining <1.2s latency for 250+ concurrent support sessions</li>
+<li>Implemented hybrid chunking strategies (semantic + hierarchical) to retrieve customer support documentation from 5+ data sources (PDFs, SQL, Confluence), enabling 253 automated support routines for cross-agent query routing</li>
+<li>Conducted weekly stakeholder reviews with API product owners to align automated routines with endpoint compliance standards, ensuring tool-calling adhered to step-by-step resolution protocols</li>
+<li>Led end-to-end development of a multi-LLM summarization framework (T5, BART, Pegasus) that processed 10M+ monthly calls reducing manual review time by 60%</li>
+<li>Optimized inference cost by 40% by finetuning on 900k cases sampled from 100M+ calls, implementing dynamic batching and 8-bit quantization to achieve 2.8x faster inference while maintaining 94% ROUGE score</li>
+</ul>
+</p>
+<button type="button" class="btn btn-primary" data-dismiss="modal">
+<i class="fa fa-times"></i> Close</button>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
